Fix trip detail to stretch vertically to card

--- a/client/src/styles/trips/TripDetail.scss
+++ b/client/src/styles/trips/TripDetail.scss
@@ -1,5 +1,11 @@
-.TripDetail-body {
+.TripDetail {
   @include card-padding;
+  display: flex;
+}
+
+.TripDetail-body {
+  height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
